--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node server.js"
   },
   "author": "Camper",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
